--- a/version2.0/index.html
+++ b/version2.0/index.html
@@ -199,4 +199,13 @@
     </div>
   </div>
   </body>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?f1d043682d3b640349841da85bfcb135";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
 </html>
