--- a/version2.0/index.html
+++ b/version2.0/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>颂车网</title>
-    <meta name="keywords" content="颂车金融,颂车网,送车,二手车,一手车,新能源车,物流车,贷款买车,分期买车"/>
-    <meta name="description" content="颂车网是一家专注于为用户提供一站式用车、出行服务的车联网平台，于 2017 年 7 月正式上线。我们致力于为用户提供优质车源和配套金融服务的同时提供全新、无压力的用车服务体验。打造以汽车交易、汽车出行、汽车生活、车主金融等一系列综合服务的智慧生态圈。" />
+    <meta name="keywords" content="颂车金融,颂车网,送车,二手车,一手车,新能源车,物流车,分期买车"/>
+    <meta name="description" content="颂车网是一家专注于为用户提供一站式用车、出行服务的车联网平台，于 2017 年 7 月正式上线。我们致力于为用户提供优质车源同时提供全新、无压力的用车服务体验。打造以汽车交易、汽车出行、汽车生活等一系列综合服务的智慧生态圈。" />
     <link rel="stylesheet" href="./static/css/jquery.fullpage.min.css"/>
     <link rel="stylesheet" href="./static/css/animate.min.css"/>
     <link rel="stylesheet" href="./static/css/custom-animate.css"/>
@@ -98,7 +98,7 @@
           <span class="text-en">about us</span>
         </h3>
         <div class="page3-content hide">
-          <p>颂车网是一家专注于为用户提供一站式用车、出行服务的车联网平台，于 2017 年 7 月正式上线。我们致力于为用户提供优质车源和配套金融服务的同时提供全新、无压力的用车服务体验。打造以汽车交易、汽车出行、汽车生活、车主金融等一系列综合服务的智慧生态圈。</p>
+          <p>颂车网是一家专注于为用户提供一站式用车、出行服务的车联网平台，于 2017 年 7 月正式上线。我们致力于为用户提供优质车源同时提供全新、无压力的用车服务体验。打造以汽车交易、汽车出行、汽车生活等一系列综合服务的智慧生态圈。</p>
         </div>
         <div class="page3-desc hide" style="width: 1005px;">
           <div class="col-4 animated fadeInLeft">
