--- a/version2.0/index.html
+++ b/version2.0/index.html
@@ -98,7 +98,8 @@
           <span class="text-en">about us</span>
         </h3>
         <div class="page3-content hide">
-          <p>颂车网是一家专注于为用户提供一站式用车、出行服务的车联网平台，于 2017 年 7 月正式上线。我们致力于为用户提供优质车源同时提供全新、无压力的用车服务体验。打造以汽车交易、汽车出行、汽车生活等一系列综合服务的智慧生态圈。</p>
+          <!--<p>颂车网是一家专注于为用户提供一站式用车、出行服务的车联网平台，于 2017 年 7 月正式上线。我们致力于为用户提供优质车源同时提供全新、无压力的用车服务体验。打造以汽车交易、汽车出行、汽车生活等一系列综合服务的智慧生态圈。</p>-->
+          <p>颂车网以社交大数据、云计算为基础，专注于为用户提供一站式用车、出行服务平台，秉承："美好车生活，快乐享出行"的服务理念，我们将改变您用车出行的生活方式。</p>
         </div>
         <div class="page3-desc hide" style="width: 1005px;">
           <div class="col-4 animated fadeInLeft">
