add songcb qrcode

--- a/version2.0/index.html
+++ b/version2.0/index.html
@@ -165,14 +165,18 @@
         <img src="static/img/page4/title.png" alt="">
       </h3>
       <div class="qrcode-container">
-        <!--<div class="download-qrcode android">-->
-          <!--<img class=" J-qrcode" src="./static/img/page4/qrcode-android-img.jpg" alt=""/>-->
-        <!--</div>-->
-        <!--<div class="download-qrcode ios">-->
-          <!--<img class=" J-qrcode" src="./static/img/page4/qrcode-ios-img.png" alt=""/>-->
-        <!--</div>-->
+        <!-- <div class="download-qrcode android">
+          <img class=" J-qrcode" src="./static/img/page4/qrcode-scb-img.png" alt="颂车邦"/>
+        </div>
+        <div class="download-qrcode ios">
+          <img class=" J-qrcode" src="./static/img/page4/qrcode-scb-img.png" alt="颂车邦"/>
+        </div> -->
         <div class="download-qrcode ios">
           <div class="image"><img class=" J-qrcode" src="./static/img/page4/qrcode-img.png" alt=""/></div>
+          <p>扫码下载APP</p>
+        </div>
+        <div class="download-qrcode ios">
+          <div class="image"><img class=" J-qrcode" src="./static/img/page4/qrcode-scb-img.png" alt="颂车邦"/></div>
           <p>扫码下载APP</p>
         </div>
       </div>
