给二维码说明增加颂车和颂车邦的标识

--- a/version2.0/index.html
+++ b/version2.0/index.html
@@ -42,7 +42,7 @@
         </span>
       </span>
     </div>
-    <!--第二页 -->
+    <!--第二页-->
     <div class="section fp-responsive page-2">
       <div class="road"></div>
       <div class="rg-light"></div>
@@ -173,11 +173,11 @@
         </div> -->
         <div class="download-qrcode ios">
           <div class="image"><img class=" J-qrcode" src="./static/img/page4/qrcode-img.png" alt=""/></div>
-          <p>扫码下载APP</p>
+          <p>扫码下载颂车APP</p>
         </div>
         <div class="download-qrcode ios">
           <div class="image"><img class=" J-qrcode" src="./static/img/page4/qrcode-scb-img.png" alt="颂车邦"/></div>
-          <p>扫码下载APP</p>
+          <p>扫码下载颂车邦APP</p>
         </div>
       </div>
       <div class="footer">
