增加待后联系方式

--- a/version2.0/index.html
+++ b/version2.0/index.html
@@ -1,39 +1,42 @@
+
+
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>颂车网</title>
-    <meta name="keywords" content="颂车金融,颂车网,送车,二手车,一手车,新能源车,物流车,分期买车"/>
-    <meta name="description" content="颂车网是一家专注于为用户提供一站式用车、出行服务的车联网平台，于 2017 年 7 月正式上线。我们致力于为用户提供优质车源同时提供全新、无压力的用车服务体验。打造以汽车交易、汽车出行、汽车生活等一系列综合服务的智慧生态圈。" />
-    <link rel="stylesheet" href="./static/css/jquery.fullpage.min.css"/>
-    <link rel="stylesheet" href="./static/css/animate.min.css"/>
-    <link rel="stylesheet" href="./static/css/custom-animate.css"/>
-    <link rel="stylesheet" href="./static/css/main.css"/>
-    <script type="text/javascript" src="static/js/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="static/js/jquery-ui-1.10.3.min.js"></script>
-    <script type="text/javascript" src="static/js/jquery.fullpage.min.js"></script>
-    <script type="text/javascript" src="static/js/main.js"></script>
-  </head>
-  <body>
-  <div class="top">
-    <div class="menu">
-      <ul class="nav" id="menu">
-        <li data-menuanchor="page1"><a href="#page1">首页</a></li>
-        <li data-menuanchor="page2"><a href="#page2">产品简介</a></li>
-        <li data-menuanchor="page3"><a href="#page3">关于我们</a></li>
-        <li data-menuanchor="joinus"><a href="#joinus">加入我们</a></li>
-        <li data-menuanchor="page4"><a href="#page4">下载</a></li>
-      </ul>
-      <div class="logo"></div>
-      <a class="right-link" href="http://sh.songcw.com" target="_blank">商家入口</a>
-    </div>
+<head>
+  <meta charset="utf-8">
+  <title>颂车网</title>
+  <meta name="keywords" content="颂车金融,颂车网,送车,二手车,一手车,新能源车,物流车,分期买车"/>
+  <meta name="description" content="颂车网是一家专注于为用户提供一站式用车、出行服务的车联网平台，于 2017 年 7 月正式上线。我们致力于为用户提供优质车源同时提供全新、无压力的用车服务体验。打造以汽车交易、汽车出行、汽车生活等一系列综合服务的智慧生态圈。" />
+  <link rel="stylesheet" href="./static/css/jquery.fullpage.min.css"/>
+  <link rel="stylesheet" href="./static/css/animate.min.css"/>
+  <link rel="stylesheet" href="./static/css/custom-animate.css"/>
+  <link rel="stylesheet" href="./static/css/main.css"/>
+  <script type="text/javascript" src="static/js/jquery-1.8.3.min.js"></script>
+  <script type="text/javascript" src="static/js/jquery-ui-1.10.3.min.js"></script>
+  <script type="text/javascript" src="static/js/jquery.fullpage.min.js"></script>
+  <script type="text/javascript" src="static/js/main.js"></script>
+</head>
+<body>
+<div class="top">
+  <div class="menu">
+    <ul class="nav" id="menu">
+      <li data-menuanchor="page1"><a href="#page1">首页</a></li>
+      <li data-menuanchor="page2"><a href="#page2">产品简介</a></li>
+      <li data-menuanchor="page3"><a href="#page3">关于我们</a></li>
+      <li data-menuanchor="joinus"><a href="#joinus">加入我们</a></li>
+      <li data-menuanchor="page4"><a href="#page4">下载</a></li>
+    </ul>
+    <div class="logo"></div>
+    <a class="right-link" href="http://sh.songcw.com" target="_blank">商家入口</a>
   </div>
-  <div id="fullpage">
-    <div class="section fp-responsive page-1">
-      <div class="main">
-        <span class="pege1-win"></span>
-      </div>
-      <span class="page-mouse">
+</div>
+<div id="fullpage">
+  <div class="section fp-responsive page-1">
+    <div class="main">
+      <span class="pege1-win"></span>
+    </div>
+    <span class="page-mouse">
         <i class="dot dot-top"></i>
         <i class="dot dot-center"></i>
         <i class="dot dot-bottom"></i>
@@ -41,47 +44,47 @@
           <i class="mouse-button"></i>
         </span>
       </span>
+  </div>
+  <!--第二页-->
+  <div class="section fp-responsive page-2">
+    <div class="road"></div>
+    <div class="rg-light"></div>
+    <div class="tree-left"></div>
+    <div class="tree-right"></div>
+    <!--云-->
+    <div class="main-container cloud-container">
+      <span class="cloud cloud-right"></span>
+      <span class="cloud cloud-center"></span>
+      <span class="cloud cloud-left"></span>
     </div>
-    <!--第二页-->
-    <div class="section fp-responsive page-2">
-      <div class="road"></div>
-      <div class="rg-light"></div>
-      <div class="tree-left"></div>
-      <div class="tree-right"></div>
-      <!--云-->
-      <div class="main-container cloud-container">
-        <span class="cloud cloud-right"></span>
-        <span class="cloud cloud-center"></span>
-        <span class="cloud cloud-left"></span>
-      </div>
-      <!--文本内容-->
-      <div class="page2-text">
-        <h3>一站式出行服务找颂车</h3>
-        <p>提供汽车交易、出行、社交、汽后、车生活、金融等服务产品</p>
-        <!-- <p>包含传统车、新能源车、特种车、车商库融等。</p> -->
-      </div>
-      <div class="car car-0 car-red">
-        <span class="wheel wheel-left run-rotate"></span>
-        <span class="wheel wheel-right run-rotate"></span>
-        <span class="car-pop"></span>
-      </div>
-      <div class="car car-1 car-orange">
-        <span class="wheel wheel-left run-rotate"></span>
-        <span class="wheel wheel-right run-rotate"></span>
-        <span class="car-pop"></span>
-      </div>
-      <div class="car car-2 car-blue">
-        <span class="wheel wheel-left run-rotate"></span>
-        <span class="wheel wheel-right run-rotate"></span>
-        <span class="car-pop"></span>
-      </div>
-      <div class="car car-3 car-red-small">
-        <span class="wheel wheel-left run-rotate"></span>
-        <span class="wheel wheel-right run-rotate"></span>
-        <span class="car-pop"></span>
-      </div>
+    <!--文本内容-->
+    <div class="page2-text">
+      <h3>一站式出行服务找颂车</h3>
+      <p>提供汽车交易、出行、社交、汽后、车生活、金融等服务产品</p>
+      <!-- <p>包含传统车、新能源车、特种车、车商库融等。</p> -->
+    </div>
+    <div class="car car-0 car-red">
+      <span class="wheel wheel-left run-rotate"></span>
+      <span class="wheel wheel-right run-rotate"></span>
+      <span class="car-pop"></span>
+    </div>
+    <div class="car car-1 car-orange">
+      <span class="wheel wheel-left run-rotate"></span>
+      <span class="wheel wheel-right run-rotate"></span>
+      <span class="car-pop"></span>
+    </div>
+    <div class="car car-2 car-blue">
+      <span class="wheel wheel-left run-rotate"></span>
+      <span class="wheel wheel-right run-rotate"></span>
+      <span class="car-pop"></span>
+    </div>
+    <div class="car car-3 car-red-small">
+      <span class="wheel wheel-left run-rotate"></span>
+      <span class="wheel wheel-right run-rotate"></span>
+      <span class="car-pop"></span>
+    </div>
 
-      <span class="page-mouse black">
+    <span class="page-mouse black">
         <i class="dot dot-top"></i>
         <i class="dot dot-center"></i>
         <i class="dot dot-bottom"></i>
@@ -89,123 +92,139 @@
           <i class="mouse-button"></i>
         </span>
       </span>
-    </div>
-    <!--第三页-->
-    <div class="section fp-responsive page-3">
-      <div class="page3-container">
-        <h3 class="page3-title hide">
-          关于我们
-          <span class="text-en">about us</span>
-        </h3>
-        <div class="page3-content hide">
-          <p>颂车网是一家专注于为用户提供一站式用车、出行服务的车联网平台，于 2017 年 7 月正式上线。我们致力于为用户提供优质车源同时提供全新、无压力的用车服务体验。打造以汽车交易、汽车出行、汽车生活等一系列综合服务的智慧生态圈。</p>
-        </div>
-        <div class="page3-desc hide" style="width: 1005px;">
-          <div class="col-4 animated fadeInLeft">
-            <h4>领先的技术实力</h4>
-            <p>核心成员出自国内汽车、金融等一流企业</p>
-            <p>全系统自主开发，数据实验室，规则决策引擎模型、数据应用，深度、广度行业领先</p>
-          </div>
-          <div class="col-4 animated fadeIn">
-            <h4>专业的运营布局</h4>
-            <p>专业：受到国家监管机构及国际机构的高度认可的领先服务和动作模式</p>
-            <p>辐射：全国经营范围</p>
-            <p>管理：基于大数据迭代开发的风险模式</p>
-          </div>
-          <div class="col-4 animated fadeInRight">
-            <h4>高效的定制服务</h4>
-            <p>全面：提供丰富的产品版块</p>
-            <p>定制：量身定制融资方案</p>
-            <p>实时：7*24小时互联网实时交互系统</p>
-            <p>灵活：快速响应服务即可到位</p>
-          </div>
-        </div>
-      </div>
-
-      <span class="page-mouse black">
-        <i class="dot dot-top"></i>
-        <i class="dot dot-center"></i>
-        <i class="dot dot-bottom"></i>
-        <span class="mouse">
-          <i class="mouse-button"></i>
-        </span>
-      </span>
-    </div>
-    <!--加入我们页-->
-    <div class="section fp-responsive page-joinus">
-      <div class="page3-container">
-        <h3 class="page3-title joinus-title hide">
-          加入我们
-          <span class="text-en" style="width: 98px; background-color: #eee;">join us</span>
-        </h3>
-        <div class="page-joinus-content hide" >
-          <div class="joinus-item">
-            <h4>招聘电话：</h4>
-            <p>023--89699638</p>
-          </div>
-          <div class="joinus-item">
-            <h4>工作地点：</h4>
-            <p>重庆 上海 成都 南京 贵阳 昆明 郑州 太原 <br /> 石家庄 西安 银川 宁夏 兰州 西宁 六安</p>
-          </div>
-          <div class="joinus-item">
-            <h4>招聘邮箱：</h4>
-            <p>heml@songcw.com</p>
-          </div>
-          <div class="joinus-item">
-            <h4>职位类别：</h4>
-            <p>市场推广、风险管理、运营管理等</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <!--第五页-->
-    <div class="section  fp-responsive page-4">
-      <h3 class="page4-title">
-        <img src="static/img/page4/title.png" alt="">
+  </div>
+  <!--第三页-->
+  <div class="section fp-responsive page-3">
+    <div class="page3-container">
+      <h3 class="page3-title hide">
+        关于我们
+        <span class="text-en">about us</span>
       </h3>
-      <div class="qrcode-container">
-        <!--<div class="download-qrcode android">-->
-          <!--<img class=" J-qrcode" src="./static/img/page4/qrcode-android-img.jpg" alt=""/>-->
-        <!--</div>-->
-        <!--<div class="download-qrcode ios">-->
-          <!--<img class=" J-qrcode" src="./static/img/page4/qrcode-ios-img.png" alt=""/>-->
-        <!--</div>-->
-        <div class="download-qrcode ios">
-          <div class="image"><img class=" J-qrcode" src="./static/img/page4/qrcode-img.png" alt=""/></div>
-          <p>扫码下载APP</p>
+      <div class="page3-content hide">
+        <p>颂车网是一家专注于为用户提供一站式用车、出行服务的车联网平台，于 2017 年 7 月正式上线。我们致力于为用户提供优质车源同时提供全新、无压力的用车服务体验。打造以汽车交易、汽车出行、汽车生活等一系列综合服务的智慧生态圈。</p>
+      </div>
+      <div class="page3-desc hide" style="width: 1005px;">
+        <div class="col-4 animated fadeInLeft">
+          <h4>领先的技术实力</h4>
+          <p>核心成员出自国内汽车、金融等一流企业</p>
+          <p>全系统自主开发，数据实验室，规则决策引擎模型、数据应用，深度、广度行业领先</p>
+        </div>
+        <div class="col-4 animated fadeIn">
+          <h4>专业的运营布局</h4>
+          <p>专业：受到国家监管机构及国际机构的高度认可的领先服务和动作模式</p>
+          <p>辐射：全国经营范围</p>
+          <p>管理：基于大数据迭代开发的风险模式</p>
+        </div>
+        <div class="col-4 animated fadeInRight">
+          <h4>高效的定制服务</h4>
+          <p>全面：提供丰富的产品版块</p>
+          <p>定制：量身定制融资方案</p>
+          <p>实时：7*24小时互联网实时交互系统</p>
+          <p>灵活：快速响应服务即可到位</p>
         </div>
       </div>
-      <div class="footer">
-        <div class="main-container">
-          <div>
-            <p>
-              <cite>服务热线：400-045-0968</cite>
-              <cite>客服咨询时间：周一至周五 9:00-17:30</cite>
-              <!--<cite>传真：023-88796008  </cite>-->
-              <cite>地址：重庆市渝中区化龙桥华盛路10号企业天地2号楼8楼</cite>
-            </p>
-            <p>© Copyright - songche All Right Reserved
-              <span class="link-edge">|</span>
-              <a href="http://www.miitbeian.gov.cn" target="_blank">渝ICP备17012129号-1</a>
-              <span class="link-edge">|</span>
-              <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=50010502001168"
-                 style="display:inline-block;height:20px;line-height:20px;">
-                <img src="static/img/police.png" style="float:left;"/>渝公网安备 50010502001168号</a>
-            </p>
-          </div>
+    </div>
+
+    <span class="page-mouse black">
+        <i class="dot dot-top"></i>
+        <i class="dot dot-center"></i>
+        <i class="dot dot-bottom"></i>
+        <span class="mouse">
+          <i class="mouse-button"></i>
+        </span>
+      </span>
+  </div>
+  <!--加入我们页-->
+  <div class="section fp-responsive page-joinus">
+    <div class="page3-container">
+      <h3 class="page3-title joinus-title hide">
+        加入我们
+        <span class="text-en" style="width: 98px; background-color: #eee;">join us</span>
+      </h3>
+      <div class="page-joinus-content hide" >
+        <div class="joinus-item">
+          <h4>招聘电话：</h4>
+          <p>023--89699638</p>
+        </div>
+        <div class="joinus-item">
+          <h4>工作地点：</h4>
+          <p>重庆 上海 成都 南京 贵阳 昆明 郑州 太原 <br /> 石家庄 西安 银川 宁夏 兰州 西宁 六安</p>
+        </div>
+        <div class="joinus-item">
+          <h4>招聘邮箱：</h4>
+          <p>heml@songcw.com</p>
+        </div>
+        <div class="joinus-item">
+          <h4>职位类别：</h4>
+          <p>市场推广、风险管理、运营管理等</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <!--第五页-->
+  <div class="section  fp-responsive page-4">
+    <h3 class="page4-title">
+      <img src="static/img/page4/title.png" alt="">
+    </h3>
+    <div class="qrcode-container">
+      <!-- <div class="download-qrcode android">
+        <img class=" J-qrcode" src="./static/img/page4/qrcode-scb-img.png" alt="颂车邦"/>
+      </div>
+      <div class="download-qrcode ios">
+        <img class=" J-qrcode" src="./static/img/page4/qrcode-scb-img.png" alt="颂车邦"/>
+      </div> -->
+      <div class="download-qrcode ios">
+        <div class="image"><img class=" J-qrcode" src="./static/img/page4/qrcode-img.png" alt=""/></div>
+        <p>扫码下载颂车APP</p>
+      </div>
+      <div class="download-qrcode ios">
+        <div class="image"><img class=" J-qrcode" src="./static/img/page4/qrcode-scb-img.png" alt=""/></div>
+        <p>扫码下载颂车邦APP</p>
+      </div>
+      <div class="download-qrcode ios">
+        <div class="image"><img class=" J-qrcode" src="./static/img/page4/yhy.png" alt=""/></div>
+        <p>扫码下载壹号源APP</p>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="main-container">
+        <div>
+          <p>
+            <cite>服务热线：400-045-0968</cite>
+            <cite>客服咨询时间：周一至周五 9:00-17:30</cite>
+            <!--<cite>传真：023-88796008  </cite>-->
+            <cite>地址：重庆市渝中区化龙桥华盛路10号企业天地2号楼8楼</cite>
+          </p>
+          <p>
+            <cite>
+              贷后部电话：&nbsp;&nbsp;
+              任分期/5优购/接力贷  023-88570650 &nbsp;&nbsp;
+              重庆车主贷/车易贷   023-88570663 &nbsp;&nbsp;
+              外区车主贷/车易贷   023-88570661
+            </cite>
+          </p>
+          <p>© Copyright - songche All Right Reserved
+            <span class="link-edge">|</span>
+            <a href="http://www.miitbeian.gov.cn" target="_blank">渝ICP备17012129号-1</a>
+            <span class="link-edge">|</span>
+            <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=50010502001168"
+               style="display:inline-block;height:20px;line-height:20px;">
+              <img src="static/img/police.png" style="float:left;"/>渝公网安备 50010502001168号</a>
+          </p>
         </div>
       </div>
     </div>
   </div>
-  </body>
-  <script>
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?f1d043682d3b640349841da85bfcb135";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
-    })();
-  </script>
+</div>
+</body>
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?f1d043682d3b640349841da85bfcb135";
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(hm, s);
+  })();
+</script>
 </html>
